src/zenoh_ffi.h

// ============================================================================
// Forward declarations
// ============================================================================
typedef struct ZenohSession ZenohSession;
typedef struct ZenohSubscriber ZenohSubscriber;
typedef struct ZenohLivelinessToken ZenohLivelinessToken;
// ============================================================================
// Enums - Priority and Congestion Control
// ============================================================================

typedef enum {
  ZENOH_PRIORITY_REAL_TIME = 1,
  ZENOH_PRIORITY_INTERACTIVE_HIGH = 2,
  ZENOH_PRIORITY_INTERACTIVE_LOW = 3,
  ZENOH_PRIORITY_DATA_HIGH = 4,
  ZENOH_PRIORITY_DATA = 5,
  ZENOH_PRIORITY_DATA_LOW = 6,
  ZENOH_PRIORITY_BACKGROUND = 7
} ZenohPriority;
typedef enum {
  ZENOH_CONGESTION_CONTROL_BLOCK = 0,
  ZENOH_CONGESTION_CONTROL_DROP = 1,
  ZENOH_CONGESTION_CONTROL_DROP_FIRST = 2
} ZenohCongestionControl;
// ============================================================================
// Encoding Types
// ============================================================================

typedef enum {
  ZENOH_ENCODING_EMPTY = 0,
  ZENOH_ENCODING_BYTES = 1,
  ZENOH_ENCODING_STRING = 2,
  ZENOH_ENCODING_JSON = 3,
  ZENOH_ENCODING_TEXT_PLAIN = 4,
  ZENOH_ENCODING_TEXT_JSON = 5,
  ZENOH_ENCODING_TEXT_HTML = 6,
  ZENOH_ENCODING_TEXT_XML = 7,
  ZENOH_ENCODING_TEXT_CSS = 8,
  ZENOH_ENCODING_TEXT_CSV = 9,
  ZENOH_ENCODING_TEXT_JAVASCRIPT = 10,
  ZENOH_ENCODING_IMAGE_PNG = 11,
  ZENOH_ENCODING_IMAGE_JPEG = 12,
  ZENOH_ENCODING_IMAGE_GIF = 13,
  ZENOH_ENCODING_IMAGE_BMP = 14,
  ZENOH_ENCODING_IMAGE_WEBP = 15,
  ZENOH_ENCODING_APPLICATION_OCTET_STREAM = 16,
  ZENOH_ENCODING_APPLICATION_JSON = 17,
  ZENOH_ENCODING_APPLICATION_XML = 18,
  ZENOH_ENCODING_APPLICATION_CBOR = 19,
  ZENOH_ENCODING_APPLICATION_YAML = 20,
  ZENOH_ENCODING_APPLICATION_PROTOBUF = 21,
  ZENOH_ENCODING_APPLICATION_CDR = 22,
  ZENOH_ENCODING_CUSTOM = 100
} ZenohEncodingId;
// ============================================================================
// Publisher Options
// ============================================================================

typedef struct {
  ZenohPriority priority;
  ZenohCongestionControl congestion_control;
  ZenohEncodingId encoding;
  const char *encoding_schema;  // Optional schema for encoding
  bool is_express;              // Express mode for low latency
} ZenohPublisherOptions;
// ============================================================================
// Put Options
// ============================================================================

typedef struct {
  ZenohPriority priority;
  ZenohCongestionControl congestion_control;
  ZenohEncodingId encoding;
  const char *encoding_schema;
  const uint8_t *attachment;
  size_t attachment_len;
  bool is_express;
} ZenohPutOptions;
// ============================================================================
// Query Options
// ============================================================================

typedef struct {
  uint64_t timeout_ms;  // Timeout in milliseconds (0 = default)
  ZenohPriority priority;
  ZenohCongestionControl congestion_control;
  const uint8_t *payload;
  size_t payload_len;
  ZenohEncodingId encoding;
  const uint8_t *attachment;
  size_t attachment_len;
} ZenohGetOptions;
// Query callback with extended info
typedef void (*ZenohGetCallback)(const char *key, const uint8_t *value,
                                 size_t len, const char *kind, void *context);
// Query completion callback
typedef void (*ZenohGetCompleteCallback)(void *context);
// Liveliness callback
typedef void (*ZenohLivelinessCallback)(const char *key, int is_alive,
                                        void *context);
FFI_PLUGIN_EXPORT void zenoh_query_reply(void *reply_context, const char *key,
                                         const uint8_t *data, size_t len);
FFI_PLUGIN_EXPORT void zenoh_query_reply_with_options(
    void *reply_context, const char *key, const uint8_t *data, size_t len,
    ZenohEncodingId encoding, const uint8_t *attachment, size_t attachment_len);
// ============================================================================
// Ad-hoc Operations
// ============================================================================

FFI_PLUGIN_EXPORT int zenoh_put(ZenohSession *session, const char *key,
                                const uint8_t *data, size_t len);
FFI_PLUGIN_EXPORT int zenoh_put_with_options(ZenohSession *session,
                                             const char *key,
                                             const uint8_t *data, size_t len,
                                             ZenohPutOptions *options);
FFI_PLUGIN_EXPORT int zenoh_delete(ZenohSession *session, const char *key);
// ============================================================================
// Query (Get)
// ============================================================================

FFI_PLUGIN_EXPORT void zenoh_get_async(ZenohSession *session,
                                       const char *selector,
                                       ZenohGetCallback callback,
                                       void *context);
FFI_PLUGIN_EXPORT void zenoh_get_async_with_options(
    ZenohSession *session, const char *selector, ZenohGetCallback callback,
    ZenohGetCompleteCallback complete_callback, void *context,
    ZenohGetOptions *options);
// ============================================================================
// Liveliness
// ============================================================================

FFI_PLUGIN_EXPORT ZenohLivelinessToken *
zenoh_declare_liveliness_token(ZenohSession *session, const char *key_expr);
FFI_PLUGIN_EXPORT void
zenoh_undeclare_liveliness_token(ZenohLivelinessToken *token);
FFI_PLUGIN_EXPORT ZenohSubscriber *zenoh_declare_liveliness_subscriber(
    ZenohSession *session, const char *key_expr,
    ZenohLivelinessCallback callback, void *context, bool history);
FFI_PLUGIN_EXPORT void zenoh_liveliness_get(ZenohSession *session,
                                            const char *key_expr,
                                            ZenohLivelinessCallback callback,
                                            void *context, uint64_t timeout_ms);
// ============================================================================
// Scouting
// ============================================================================

FFI_PLUGIN_EXPORT void zenoh_scout(const char *what, const char *config,
                                   void (*callback)(const char *info));
// ============================================================================
// Helpers
// ============================================================================

FFI_PLUGIN_EXPORT void zenoh_free_string(char *str);
// Default options initializers
FFI_PLUGIN_EXPORT void zenoh_publisher_options_default(
    ZenohPublisherOptions *options);
FFI_PLUGIN_EXPORT void zenoh_put_options_default(ZenohPutOptions *options);
FFI_PLUGIN_EXPORT void zenoh_get_options_default(ZenohGetOptions *options);