lib/src/gen/zenoh_ffi_bindings_generated.dart


  late final _zenoh_query_replyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Uint8>, ffi.Size)>>('zenoh_query_reply');
  late final _zenoh_query_reply = _zenoh_query_replyPtr.asFunction<
      void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Uint8>, int)>();

  void zenoh_query_reply_with_options(
    ffi.Pointer<ffi.Void> reply_context,
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<ffi.Uint8> data,
    int len,
    int encoding,
    ffi.Pointer<ffi.Uint8> attachment,
    int attachment_len,
  ) {
    return _zenoh_query_reply_with_options(
      reply_context,
      key,
      data,
      len,
      encoding,
      attachment,
      attachment_len,
    );
  }

  late final _zenoh_query_reply_with_optionsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Uint8>,
              ffi.Size,
              ffi.Int32,
              ffi.Pointer<ffi.Uint8>,
              ffi.Size)>>('zenoh_query_reply_with_options');
  late final _zenoh_query_reply_with_options =
      _zenoh_query_reply_with_optionsPtr.asFunction<
          void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Uint8>, int, int, ffi.Pointer<ffi.Uint8>, int)>();

  /// ============================================================================
  /// Ad-hoc Operations
  /// ============================================================================
  int zenoh_put(
    ffi.Pointer<ZenohSession> session,
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<ffi.Uint8> data,
    int len,
  ) {
    return _zenoh_put(
      session,
      key,
      data,
      len,
    );
  }

  late final _zenoh_putPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ZenohSession>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Uint8>, ffi.Size)>>('zenoh_put');
  late final _zenoh_put = _zenoh_putPtr.asFunction<
      int Function(ffi.Pointer<ZenohSession>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Uint8>, int)>();

  int zenoh_put_with_options(
    ffi.Pointer<ZenohSession> session,
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<ffi.Uint8> data,
    int len,
    ffi.Pointer<ZenohPutOptions> options,
  ) {
    return _zenoh_put_with_options(
      session,
      key,
      data,
      len,
      options,
    );
  }

  late final _zenoh_put_with_optionsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ZenohSession>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Uint8>,
              ffi.Size,
              ffi.Pointer<ZenohPutOptions>)>>('zenoh_put_with_options');
  late final _zenoh_put_with_options = _zenoh_put_with_optionsPtr.asFunction<
      int Function(ffi.Pointer<ZenohSession>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Uint8>, int, ffi.Pointer<ZenohPutOptions>)>();

  int zenoh_delete(
    ffi.Pointer<ZenohSession> session,
    ffi.Pointer<ffi.Char> key,
  ) {
    return _zenoh_delete(
      session,
      key,
    );
  }

  late final _zenoh_deletePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ZenohSession>,
              ffi.Pointer<ffi.Char>)>>('zenoh_delete');
  late final _zenoh_delete = _zenoh_deletePtr.asFunction<
      int Function(ffi.Pointer<ZenohSession>, ffi.Pointer<ffi.Char>)>();

  /// ============================================================================
  /// Query (Get)
  /// ============================================================================
  void zenoh_get_async(
    ffi.Pointer<ZenohSession> session,
    ffi.Pointer<ffi.Char> selector,
    ZenohGetCallback callback,
    ffi.Pointer<ffi.Void> context,
  ) {
    return _zenoh_get_async(
      session,
      selector,
      callback,
      context,
    );
  }

  late final _zenoh_get_asyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ZenohSession>, ffi.Pointer<ffi.Char>,
              ZenohGetCallback, ffi.Pointer<ffi.Void>)>>('zenoh_get_async');
  late final _zenoh_get_async = _zenoh_get_asyncPtr.asFunction<
      void Function(ffi.Pointer<ZenohSession>, ffi.Pointer<ffi.Char>,
          ZenohGetCallback, ffi.Pointer<ffi.Void>)>();

  void zenoh_get_async_with_options(
    ffi.Pointer<ZenohSession> session,
    ffi.Pointer<ffi.Char> selector,
    ZenohGetCallback callback,
    ZenohGetCompleteCallback complete_callback,
    ffi.Pointer<ffi.Void> context,
    ffi.Pointer<ZenohGetOptions> options,
  ) {
    return _zenoh_get_async_with_options(
      session,
      selector,
      callback,
      complete_callback,
      context,
      options,
    );
  }

  late final _zenoh_get_async_with_optionsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ZenohSession>,
              ffi.Pointer<ffi.Char>,
              ZenohGetCallback,
              ZenohGetCompleteCallback,
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ZenohGetOptions>)>>('zenoh_get_async_with_options');
  late final _zenoh_get_async_with_options =
      _zenoh_get_async_with_optionsPtr.asFunction<
          void Function(
              ffi.Pointer<ZenohSession>,
              ffi.Pointer<ffi.Char>,
              ZenohGetCallback,
              ZenohGetCompleteCallback,
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ZenohGetOptions>)>();

  /// ============================================================================
  /// Liveliness
  /// ============================================================================
  ffi.Pointer<ZenohLivelinessToken> zenoh_declare_liveliness_token(
    ffi.Pointer<ZenohSession> session,
    ffi.Pointer<ffi.Char> key_expr,
  ) {
    return _zenoh_declare_liveliness_token(
      session,
      key_expr,
    );
  }

  late final _zenoh_declare_liveliness_tokenPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ZenohLivelinessToken> Function(ffi.Pointer<ZenohSession>,
              ffi.Pointer<ffi.Char>)>>('zenoh_declare_liveliness_token');
  late final _zenoh_declare_liveliness_token =
      _zenoh_declare_liveliness_tokenPtr.asFunction<
          ffi.Pointer<ZenohLivelinessToken> Function(
              ffi.Pointer<ZenohSession>, ffi.Pointer<ffi.Char>)>();

  void zenoh_undeclare_liveliness_token(
    ffi.Pointer<ZenohLivelinessToken> token,
  ) {
    return _zenoh_undeclare_liveliness_token(
      token,
    );
  }

  late final _zenoh_undeclare_liveliness_tokenPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<ZenohLivelinessToken>)>>(
      'zenoh_undeclare_liveliness_token');
  late final _zenoh_undeclare_liveliness_token =
      _zenoh_undeclare_liveliness_tokenPtr
          .asFunction<void Function(ffi.Pointer<ZenohLivelinessToken>)>();

  ffi.Pointer<ZenohSubscriber> zenoh_declare_liveliness_subscriber(
    ffi.Pointer<ZenohSession> session,
    ffi.Pointer<ffi.Char> key_expr,
    ZenohLivelinessCallback callback,
    ffi.Pointer<ffi.Void> context,
    bool history,
  ) {
    return _zenoh_declare_liveliness_subscriber(
      session,
      key_expr,
      callback,
      context,
      history,
    );
  }

  late final _zenoh_declare_liveliness_subscriberPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ZenohSubscriber> Function(
              ffi.Pointer<ZenohSession>,
              ffi.Pointer<ffi.Char>,
              ZenohLivelinessCallback,
              ffi.Pointer<ffi.Void>,
              ffi.Bool)>>('zenoh_declare_liveliness_subscriber');
  late final _zenoh_declare_liveliness_subscriber =
      _zenoh_declare_liveliness_subscriberPtr.asFunction<
          ffi.Pointer<ZenohSubscriber> Function(
              ffi.Pointer<ZenohSession>,
              ffi.Pointer<ffi.Char>,
              ZenohLivelinessCallback,
              ffi.Pointer<ffi.Void>,
              bool)>();

  void zenoh_liveliness_get(
    ffi.Pointer<ZenohSession> session,
    ffi.Pointer<ffi.Char> key_expr,
    ZenohLivelinessCallback callback,
    ffi.Pointer<ffi.Void> context,
    int timeout_ms,
  ) {
    return _zenoh_liveliness_get(
      session,
      key_expr,
      callback,
      context,
      timeout_ms,
    );
  }

  late final _zenoh_liveliness_getPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ZenohSession>,
              ffi.Pointer<ffi.Char>,
              ZenohLivelinessCallback,
              ffi.Pointer<ffi.Void>,
              ffi.Uint64)>>('zenoh_liveliness_get');
  late final _zenoh_liveliness_get = _zenoh_liveliness_getPtr.asFunction<
      void Function(ffi.Pointer<ZenohSession>, ffi.Pointer<ffi.Char>,
          ZenohLivelinessCallback, ffi.Pointer<ffi.Void>, int)>();

  /// ============================================================================
  /// Scouting
  /// ============================================================================
  void zenoh_scout(
    ffi.Pointer<ffi.Char> what,
    ffi.Pointer<ffi.Char> config,
    ffi.Pointer<
            ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char> info)>>
        callback,
  ) {
    return _zenoh_scout(
      what,
      config,
      callback,
    );
  }

  late final _zenoh_scoutPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<
                  ffi.NativeFunction<
                      ffi.Void Function(
                          ffi.Pointer<ffi.Char> info)>>)>>('zenoh_scout');
  late final _zenoh_scout = _zenoh_scoutPtr.asFunction<
      void Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<
              ffi.NativeFunction<
                  ffi.Void Function(ffi.Pointer<ffi.Char> info)>>)>();

  /// ============================================================================
  /// Helpers
  /// ============================================================================
  void zenoh_free_string(
    ffi.Pointer<ffi.Char> str,
  ) {
    return _zenoh_free_string(
      str,
    );
  }

  late final _zenoh_free_stringPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'zenoh_free_string');
  late final _zenoh_free_string =
      _zenoh_free_stringPtr.asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  /// Default options initializers
  void zenoh_publisher_options_default(
    ffi.Pointer<ZenohPublisherOptions> options,
  ) {
    return _zenoh_publisher_options_default(
      options,
    );
  }

  late final _zenoh_publisher_options_defaultPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<ZenohPublisherOptions>)>>(
      'zenoh_publisher_options_default');
  late final _zenoh_publisher_options_default =
      _zenoh_publisher_options_defaultPtr
          .asFunction<void Function(ffi.Pointer<ZenohPublisherOptions>)>();

  void zenoh_put_options_default(
    ffi.Pointer<ZenohPutOptions> options,
  ) {
    return _zenoh_put_options_default(
      options,
    );
  }

  late final _zenoh_put_options_defaultPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ZenohPutOptions>)>>(
      'zenoh_put_options_default');
  late final _zenoh_put_options_default = _zenoh_put_options_defaultPtr
      .asFunction<void Function(ffi.Pointer<ZenohPutOptions>)>();

  void zenoh_get_options_default(
    ffi.Pointer<ZenohGetOptions> options,
  ) {
    return _zenoh_get_options_default(
      options,
    );
  }
